crates/vexor-compiler/tests/golden/error/input/fn_dup_param.vx
-- duplicate x param
fn sq(x, x) = x * x

val result = sq(10)
export Circle(result)
